[package]
name = "network_limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
futures = "0.3.31"
ndisapi = "0.6.0"
prettytable = "0.10.0"
smoltcp = "0.11.0"
tokio = {version = "1.41.0", features = ["full"]}
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }
